--- a/angular.json
+++ b/angular.json
@@ -23,10 +23,10 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": ["./node_modules/primeicons/primeicons.css", 
-              
-              "./node_modules/primeng/resources/themes/nova-light/theme.css", 
-              
+            "styles": [
+              "src/custom-theme.scss",
+              "./node_modules/primeicons/primeicons.css",
+              "./node_modules/primeng/resources/themes/nova-light/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
               "src/styles.css"
             ],
@@ -124,6 +124,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "myfavbands"
 }
