--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "highcharts-angular": "^2.8.0",
     "primeicons": "^1.0.0",
     "primeng": "^8.1.1",
     "rxjs": "~6.4.0",
