--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-font-awesome": "^3.1.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "highcharts-angular": "^2.8.0",
